--- a/css/main.css
+++ b/css/main.css
@@ -85,21 +85,6 @@ img {
   --red-status: rgba(204, 12, 0, 1);
 }
 
-::-webkit-scrollbar {
-  height: 5px;
-  width: 5px;
-}
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
 .main__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -325,13 +310,17 @@ img {
 }
 
 .table__section {
-  height: 75vh;
+  height: 80vh;
   width: 100%;
-  overflow: auto;
   padding: 0 20px 18px 20px;
   background-color: var(--white);
   -webkit-box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
           box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
+}
+
+.orders__table-thumb {
+  overflow: auto;
+  height: 75vh;
 }
 
 .orders__table {
@@ -1121,11 +1110,19 @@ img {
 }
 
 .packing__checkbox {
-  fill: rgba(0, 0, 0, 0);
+  fill: transparent;
   stroke: #d6dae6;
   width: 24px;
   height: 24px;
   margin-right: 11px;
+}
+
+.packing__checkbox-checked {
+  background-image: url(../images/filled.svg);
+  background-size: contain;
+  stroke: transparent;
+  background-origin: content-box;
+  border-radius: 2px;
 }
 
 .packing__item__img {
@@ -1183,6 +1180,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 2;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   width: 480px;
@@ -1294,8 +1292,7 @@ img {
 }
 
 .icon__close {
-  fill: transparent;
-  stroke: #a1a5ba;
+  fill: #a1a5ba;
   width: 16px;
   height: 16px;
   cursor: pointer;
@@ -1393,6 +1390,11 @@ img {
   cursor: pointer;
 }
 
+.confirm-packages:hover,
+.confirm-packages:focus {
+  opacity: 1;
+}
+
 .cancel-selection {
   border-radius: 10px;
   opacity: 0.6;
@@ -1417,6 +1419,7 @@ img {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  padding-top: 20px;
 }
 
 .packing__table__section {
@@ -1430,13 +1433,22 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 75vh;
+  height: 80vh;
   width: 100%;
   overflow: auto;
   padding: 0 20px 18px 20px;
   background-color: var(--white);
   -webkit-box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
           box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
+}
+
+.packing__table__section::-webkit-scrollbar {
+  width: 6px;
+}
+
+.packing__table__section::-webkit-scrollbar-thumb {
+  background-color: #d6dae6;
+  border-radius: 10px;
 }
 
 .devided-packing__list {
@@ -1487,7 +1499,6 @@ img {
   left: 80px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  z-index: 3;
 }
 
 .chosen__quantity__input {
@@ -1505,4 +1516,245 @@ img {
   width: 100%;
   display: grid;
   grid-template-columns: 2fr 1fr 2fr 4fr 1fr 1fr;
+}
+
+.modal__first-step {
+  margin-top: 34px;
+}
+
+.confirm__modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 2;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 849px;
+  height: auto;
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 16px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.12);
+}
+
+.modal__packing__table {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1.5fr 1fr 2fr 1fr 1fr;
+  height: 365px;
+  overflow: auto;
+}
+
+.modal__packing__table::-webkit-scrollbar {
+  width: 4px;
+}
+
+.modal__packing__table::-webkit-scrollbar-thumb {
+  background-color: #d6dae6;
+  border-radius: 10px;
+}
+
+.devided__packing__list-modal {
+  width: 100%;
+  grid-column: span 5;
+}
+
+.confirm__modal__title {
+  color: #4c5272;
+  font-size: 20px;
+  letter-spacing: 0.5px;
+}
+
+.confirm__modal__title-thumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 25px;
+}
+
+.confirm__modal__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+}
+
+.confirm__modal__nav-item {
+  width: 50%;
+  border-bottom: 5px solid rgba(67, 152, 211, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  cursor: pointer;
+}
+
+.confirm__modal__nav-current {
+  border-bottom: 5px solid #4398d3;
+  padding-bottom: 5px;
+}
+
+.confirm__modal__nav__title {
+  color: #a1a5ba;
+  font-size: 13px;
+  letter-spacing: 0.325px;
+  text-transform: uppercase;
+}
+
+.confirm__modal__nav__title-curent {
+  color: #4c5272;
+}
+
+.modal__packing__table__title {
+  color: #4c5272;
+  font-size: 13px;
+  letter-spacing: 0.325px;
+  text-transform: uppercase;
+}
+
+.modal__order__item__title {
+  color: #a1a5ba;
+  font-size: 14px;
+}
+
+.modal__order__item-field {
+  color: #4c5272;
+  font-size: 14px;
+}
+
+.modal__chosen__quantity {
+  border-radius: 8px;
+  background: #f4f5fb;
+  border: 1px solid #f4f5fb;
+  width: 70px;
+  height: 22px;
+  padding: 8px 5px;
+  color: #a6a6a6;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.35px;
+}
+
+.modal__chosen__quantity:focus {
+  border: 1px solid var(--active);
+  outline: none;
+}
+
+.modal__packing__item__total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 5px;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 15px 4px 15px 0px;
+  border-bottom: 1px solid #d6dae6;
+}
+
+.modal__packing__item__thumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 5px;
+  padding: 15px 5px;
+  border-bottom: 1px solid #d6dae6;
+}
+
+.devided-packing__table__modal {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1.5fr 1fr 1fr;
+}
+
+.order__item__total__thumb-modal {
+  padding: 1px 0;
+  grid-column: span 4;
+}
+
+.back__btn {
+  border-radius: 10px;
+  width: 227px;
+  height: 40px;
+  padding: 8px 39px;
+  color: #a1a5ba;
+  font-family: Futura;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-color: #fff;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+
+.print__btn {
+  width: 227px;
+  height: 40px;
+  padding: 8px 39px;
+  border-radius: 10px;
+  background-color: #4398d3;
+  color: var(--White, #fff);
+  font-family: Futura;
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 0.325px;
+  text-transform: uppercase;
+  border: 1px solid #4398d3;
+  cursor: pointer;
+}
+
+.confirm__modal__buttons {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 16px;
+}
+
+.modal__first-step {
+  display: block;
+}
+
+.modal__second-step {
+  margin-top: 15px;
+  background-color: #f4f5fb;
+  padding: 17px;
+  display: none;
+}
+
+.packing__img {
+  width: 756px;
+  height: auto;
+}
+
+.packing__img-thumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }/*# sourceMappingURL=main.css.map */
