--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -106,12 +106,16 @@
 }
 
 .table__section {
-  height: 75vh;
+  height: 80vh;
   width: 100%;
-  overflow: auto;
   padding: 0 20px 18px 20px;
   background-color: var(--white);
   box-shadow: 0px 3px 8px 0px rgba(76, 82, 114, 0.12);
+}
+
+.orders__table-thumb {
+  overflow: auto;
+  height: 75vh;
 }
 
 .orders__table {
