--- a/sass/_orders.scss
+++ b/sass/_orders.scss
@@ -1,7 +1,7 @@
 .orders {
   padding: 57px 40px 40px 40px;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
   width: 100%;
 
   &__title {
@@ -88,6 +88,10 @@
       background-color: var(--white);
       border: 3px solid var(--white);
       cursor: pointer;
+      color: #a1a5ba;
+      font-family: Futura;
+      font-size: 14px;
+      line-height: 20px;
 
       @media (max-width: 1200px) {
         width: 150px;
