--- a/sass/utils.scss
+++ b/sass/utils.scss
@@ -1,70 +1,69 @@
 body {
-    background-color: var(--background-color);
-    font-family: "Futura", sans-serif;
-    color: var(--main-textcolor);
-    letter-spacing: 0.03em;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
-    margin-top: 0;
-  }
-  
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .container {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+  background-color: var(--background-color);
+  font-family: "Futura", sans-serif;
+  color: var(--main-textcolor);
+  letter-spacing: 0.03em;
+}
 
-    @media screen and (min-width: 480px) {
-      width: 480px;
-    }
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-    @media screen and (min-width: 768px) {
-      width: 768px;
-    }
+a {
+  text-decoration: none;
+}
 
-    @media screen and (min-width: 1200px) {
-      width: 1200px;
-    }
-  }
-  
-  .visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset (50%);
-    margin: -1px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
   }
 
-  @font-face {
-    font-family: "Futura";
-    src: url('../fonts/futura.ttf') format('truetype');
+  @media screen and (min-width: 768px) {
+    width: 768px;
   }
 
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset (50%);
+  margin: -1px;
+}
+
+@font-face {
+  font-family: "Futura";
+  src: url("../fonts/futura.ttf") format("truetype");
+}
