--- a/sass/_packing-order.scss
+++ b/sass/_packing-order.scss
@@ -158,6 +158,24 @@
 }
 
 .print__btn {
+  display: block;
+  width: 227px;
+  height: 40px;
+  padding: 8px 39px;
+  border-radius: 10px;
+  background-color: #4398d3;
+  color: var(--White, #fff);
+  font-family: Futura;
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 0.325px;
+  text-transform: uppercase;
+  border: 1px solid #4398d3;
+  cursor: pointer;
+}
+
+.finish__btn {
+  display: none;
   width: 227px;
   height: 40px;
   padding: 8px 39px;
@@ -177,6 +195,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 16px;
+  display: flex;
 }
 
 .modal__first-step {
